--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary" style="background-image: url({{ url_for('static', filename='images/grass.jpg')}})">
     <div class="col-md-6 p-lg-5 mx-auto my-5">
-      <h1 class="display-3 fw-bold">Hi, I'm Irina and this is my blog</h1>
+      <h1 class="display-3 fw-bold">Hi, I'm Irina and this is my portfolio</h1>
       <h3 class="fw-normal text-muted mb-3">You can find some information about me here</h3>
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
         <a class="icon-link" href="{{ url_for('about') }}">
